force-app/main/default/objects/Project__c/fields/Allow_Self_Staffing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Self_Staffing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Self-Staffing</label>
    <type>Checkbox</type>
</CustomField>