force-app/main/default/objects/Project__c/fields/Allow_Shadow_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Shadow_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Shadow Assignment</label>
    <type>Checkbox</type>
</CustomField>