force-app/main/default/objects/Project__c/fields/Allow_Timecart_Without_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Timecart_Without_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Timecart Without Assignment</label>
    <type>Checkbox</type>
</CustomField>