force-app/main/default/objects/Project__c/fields/Biliable__c.field-meta.xml
<CustomField>
    <fullName>Biliable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biliable</label>
    <type>Checkbox</type>
</CustomField>