force-app/main/default/objects/Project__c/fields/Commercial_Status__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Status__c</fullName>
    <label>Commercial Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>