force-app/main/default/objects/Project__c/fields/Commercial_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Status_Comments__c</fullName>
    <label>Commercial Status Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>