force-app/main/default/objects/Project__c/fields/Daily_Timecart_Notes_Required__c.field-meta.xml
<CustomField>
    <fullName>Daily_Timecart_Notes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Timecart Notes Required</label>
    <type>Checkbox</type>
</CustomField>