force-app/main/default/objects/Project__c/fields/Milestones_Required_for_Timecards__c.field-meta.xml
<CustomField>
    <fullName>Milestones_Required_for_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestones Required for Timecards</label>
    <type>Checkbox</type>
</CustomField>