force-app/main/default/objects/Project__c/fields/Multi_team_Project__c.field-meta.xml
<CustomField>
    <fullName>Multi_team_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-team Project</label>
    <type>Checkbox</type>
</CustomField>