force-app/main/default/objects/Project__c/fields/Planned_Billiable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Billiable_Hours__c</fullName>
    <label>Planned Billiable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>