force-app/main/default/objects/Project__c/listViews/Absences.listView-meta.xml
<ListView>
    <fullName>Absences</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Type__c</field>
        <operation>equals</operation>
        <value>Internal Project,Internal Activities,Absences</value>
    </filters>
    <label>Absences</label>
</ListView>