force-app/main/default/objects/Project__c/listViews/Sickleaves.listView-meta.xml
<ListView>
    <fullName>Sickleaves</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Sickleaves</value>
    </filters>
    <label>Sickleaves</label>
</ListView>